--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "json-rules-engine": "^6.1.2",
+    "jsonpath-plus": "^6.0.1",
+    "lodash": "^4.17.21",
     "ngx-editor": "^11.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -43,6 +45,7 @@
     "@angular/compiler-cli": "~12.2.4",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/jasmine": "~3.8.0",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
     "jasmine-core": "~3.8.0",
