--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngx-formly/material": "^5.10.33",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@stoplight/json-ref-resolver": "^3.1.3",
     "json-rules-engine": "^6.1.2",
     "jsonpath-plus": "^6.0.1",
     "lodash": "^4.17.21",
@@ -46,7 +47,7 @@
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.179",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.47",
     "@types/uuid": "^8.3.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
