--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "serve": "ng serve",
     "build": "ng build",
     "clean": "",
     "watch": "ng build --watch --configuration development",
@@ -28,32 +28,32 @@
     "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
     "@ngx-formly/core": "^5.11.2",
     "@ngx-formly/material": "^5.11.2",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@stoplight/json-ref-resolver": "^3.1.3",
     "json-rules-engine": "^6.1.2",
     "jsonpath-plus": "^6.0.1",
-    "ngx-editor": "^11.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
+    "ngx-editor": "^12.2.2",
+    "rxjs": "~7.5.5",
+    "tslib": "^2.3.1",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.20.47",
-    "@types/uuid": "^8.3.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "@types/jasmine": "~4.0.0",
+    "@types/node": "^17.0.23",
+    "@types/uuid": "^8.3.4",
+    "jasmine-core": "~4.0.1",
+    "karma": "~6.3.17",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.3",
-    "webpack-bundle-analyzer": "^4.4.2"
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
