--- a/package.json
+++ b/package.json
@@ -12,31 +12,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.3",
-    "@angular/cdk": "^13.3.3",
-    "@angular/common": "~13.3.3",
-    "@angular/compiler": "~13.3.3",
-    "@angular/core": "~13.3.3",
-    "@angular/forms": "~13.3.3",
-    "@angular/material": "^13.3.3",
-    "@angular/platform-browser": "~13.3.3",
-    "@angular/platform-browser-dynamic": "~13.3.3",
-    "@angular/router": "~13.3.3",
-    "@ngx-formly/core": "^5.12.0",
-    "@ngx-formly/material": "^5.12.0",
-    "@stoplight/json-ref-resolver": "^3.1.3",
-    "json-rules-engine": "^6.1.2",
-    "jsonpath-plus": "^6.0.1",
-    "ngx-editor": "^12.2.2",
-    "rxjs": "~7.5.5",
+    "@angular/animations": "^14.2.7",
+    "@angular/cdk": "^14.2.5",
+    "@angular/common": "^14.2.7",
+    "@angular/compiler": "^14.2.7",
+    "@angular/core": "^14.2.7",
+    "@angular/forms": "^14.2.7",
+    "@angular/material": "^14.2.5",
+    "@angular/platform-browser": "^14.2.7",
+    "@angular/platform-browser-dynamic": "^14.2.7",
+    "@angular/router": "^14.2.7",
+    "@ngx-formly/core": "^6.0.1",
+    "@ngx-formly/material": "^6.0.1",
+    "@stoplight/json-ref-resolver": "^3.1.4",
+    "ngx-editor": "^15.0.1",
+    "rxjs": "~7.5.7",
     "tslib": "^2.3.1",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.3",
-    "@angular/cli": "~13.3.3",
-    "@angular/compiler-cli": "~13.3.3",
+    "@angular-devkit/build-angular": "^14.2.6",
+    "@angular/cli": "^14.2.6",
+    "@angular/compiler-cli": "^14.2.7",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^17.0.23",
     "@types/uuid": "^8.3.4",
@@ -47,6 +45,6 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.3",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.6.1"
   }
 }
