--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "ng": "ng",
     "serve": "npm run build-schema && ng serve",
     "build": "npm run build-schema && ng build",
-    "clean": "",
     "watch": "npm run build-schema && ng build --watch --configuration development",
     "test": "ng test",
     "stats": "ng build --stats-json && webpack-bundle-analyzer dist/formly-builder/stats.json",
@@ -13,31 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.7",
-    "@angular/cdk": "^14.2.5",
-    "@angular/common": "^14.2.7",
-    "@angular/compiler": "^14.2.7",
-    "@angular/core": "^14.2.7",
-    "@angular/forms": "^14.2.7",
-    "@angular/material": "^14.2.5",
-    "@angular/platform-browser": "^14.2.7",
-    "@angular/platform-browser-dynamic": "^14.2.7",
-    "@angular/router": "^14.2.7",
-    "@ngx-formly/core": "^6.0.1",
-    "@ngx-formly/material": "^6.0.1",
-    "ngx-editor": "^15.0.1",
+    "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.0",
+    "@angular/common": "^15.2.0",
+    "@angular/compiler": "^15.2.0",
+    "@angular/core": "^15.2.0",
+    "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.0",
+    "@angular/platform-browser": "^15.2.0",
+    "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/router": "^15.2.0",
+    "@ngx-formly/core": "^6.1.1",
+    "@ngx-formly/material": "^6.1.1",
+    "ngx-editor": "^15.2.0",
     "rxjs": "~7.5.7",
     "tslib": "^2.3.1",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.6",
-    "@angular/cli": "^14.2.6",
-    "@angular/compiler-cli": "^14.2.7",
-    "@apidevtools/json-schema-ref-parser": "^9.0.9",
+    "@angular-devkit/build-angular": "^15.2.0",
+    "@angular/cli": "^15.2.0",
+    "@angular/compiler-cli": "^15.2.0",
+    "@apidevtools/json-schema-ref-parser": "9.0.9",
     "@types/jasmine": "~4.0.0",
-    "@types/node": "^17.0.23",
+    "@types/node": "^18.14.1",
     "@types/uuid": "^8.3.4",
     "axios": "^1.1.3",
     "jasmine-core": "~4.0.1",
@@ -46,7 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.3",
-    "webpack-bundle-analyzer": "^4.6.1"
+    "typescript": "~4.9.5",
+    "webpack-bundle-analyzer": "^4.8.0"
   }
 }
